feat:添加了可以修改用户信息和获得信息的功能
