# route/user.go
@@ -26,6 +26,7 @@ func (u *UserSvc) NewUserGroup(r *gin.Engine) {
 		userGroup.POST("login_v", u.uc.Login_v)
 		userGroup.POST("/foralt", u.uc.ForAlt)
 		userGroup.POST("/cancel", u.uc.Cancel)
-
+		userGroup.GET("/info/:id", u.uc.GetUserInfoById)
+		userGroup.POST("/update", u.uc.UpdateUserInfo)
 	}
 }
